@@ -1750,7 +1750,7 @@ public final class OutlookFolderStorage implements FolderStorage {
             final List<SortableId> sortedIDs = f.get();
             return sortedIDs.toArray(new SortableId[sortedIDs.size()]);
         } catch (final InterruptedException e) {
-            ThreadPools.unexpectedlyInterrupted(Thread.currentThread());
+            Thread.currentThread().interrupt();
             throw FolderExceptionErrorMessage.UNEXPECTED_ERROR.create(e, e.getMessage());
         } catch (final ExecutionException e) {
             final Throwable cause = e.getCause();
@@ -1890,7 +1890,7 @@ public final class OutlookFolderStorage implements FolderStorage {
             final List<SortableId> sortedIDs = f.get();
             return sortedIDs.isEmpty() ? new SortableId[0] : sortedIDs.toArray(new SortableId[sortedIDs.size()]);
         } catch (final InterruptedException e) {
-            ThreadPools.unexpectedlyInterrupted(Thread.currentThread());
+            Thread.currentThread().interrupt();
             throw FolderExceptionErrorMessage.UNEXPECTED_ERROR.create(e, e.getMessage());
         } catch (final ExecutionException e) {
             final Throwable cause = e.getCause();
