@@ -49,7 +49,6 @@
 
 package com.openexchange.threadpool.internal;
 
-import com.openexchange.threadpool.InterruptorAware;
 import com.openexchange.threadpool.ThreadRenamer;
 
 /**
@@ -57,18 +56,11 @@ import com.openexchange.threadpool.ThreadRenamer;
  *
  * @author <a href="mailto:thorben.betten@open-xchange.com">Thorben Betten</a>
  */
-public final class CustomThread extends Thread implements ThreadRenamer, InterruptorAware {
+public final class CustomThread extends Thread implements ThreadRenamer {
 
     private volatile String originalName;
-
     private volatile String appendix;
-
     private volatile boolean changed;
-
-    /**
-     * The stack trace of the thread that invoked {@link #interrupt()} on this {@link CustomThread} instance.
-     */
-    private volatile StackTraceElement[] interruptorStack;
 
     /**
      * Initializes a new {@link CustomThread}.
@@ -161,29 +153,6 @@ public final class CustomThread extends Thread implements ThreadRenamer, Interru
         } else {
             appendix = null;
         }
-    }
-
-    /**
-     * Clears the stack trace of the thread that lastly invoked {@link #interrupt()}.
-     */
-    public void clearInterruptorStack() {
-        interruptorStack = null;
-    }
-
-    /**
-     * Gets the stack trace of the thread that lastly invoked {@link #interrupt()}.
-     *
-     * @return The stack trace of the interrupting thread or <code>null</code> if this thread is not in interrupted state
-     */
-    @Override
-    public StackTraceElement[] getInterruptorStack() {
-        return isInterrupted() ? interruptorStack : null;
-    }
-
-    @Override
-    public void interrupt() {
-        this.interruptorStack = new Throwable().getStackTrace();
-        super.interrupt();
     }
 
     /**
